# LLM_Agent_Orchestration_HW6

./: .claude  .coverage  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  HW6_INSTRUCTIONS_ENGLISH.md  Missions_LLM_Agent_Orchestration_HW6.md  PRD_LLM_Agent_Orchestration_HW6.md  PROGRESS_TRACKER.md  README.md  add_docstrings.py  compare_results.py  compare_results_FIXED.py  data_prep_12files.py  data_prep_FINAL.py  data_prep_helper.py  detailed_metrics.csv  domain_performance.csv  env.example  graded_scores.csv  ground_truth_dataset.csv  ground_truth_dataset.json  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  results.csv  summary_of_changes.md
.github/workflows/: ci-cd.yml
config/: logging.yaml  settings.yaml
docs/: evidence_matrix.md
docs/adr/: 001-choice-of-programming-language.md  002-choice-of-cli-framework.md  003-choice-of-data-handling-library.md  004-choice-of-llm-abstraction.md  005-choice-of-configuration-format.md  006-choice-of-testing-framework.md  007-decision-to-use-manual-evaluation.md
docs/c4/: C1_System_Context.puml  C2_Container_Diagram.puml  C3_Component_Diagram.puml  C4_Deployment_Diagram.puml
docs/extensibility/: extensibility_guide.md
docs/usability/: usability_analysis.md
llm_orchestration_hw6/cli/: main.py
llm_orchestration_hw6/data/: loader.py
notebooks/: analysis.ipynb  analysis_output.ipynb
outputs/: detailed_metrics.csv  graded_scores.csv
results/: COST_ANALYSIS.md  PROMPTS_LOG.md  RESULTS.md
tests/: test_loader.py  test_metrics.py  test_orchestrator.py  test_techniques.py
(+26 files in other folders)
